#49 adding sketch for the auto-refresh

--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -53,6 +53,9 @@
 <br/>
 <br/>
 
+{% import 'block_enable_auto_refresh.html' as block_enable_refresh %}
+{{ block_enable_refresh.enable_auto_refresh() }}
+
 <div class="body">{% block body %}{% endblock %}</div>
 <br/>
 
