--- a/synergy/mx/templates/block_time_window_selector.html
+++ b/synergy/mx/templates/block_time_window_selector.html
@@ -2,7 +2,7 @@
 {% set days_1_checked = 'checked' if not details.is_request_valid or details.time_window == 'days_1' else '' %}
 {% set days_7_checked = 'checked' if details.time_window == 'days_7' else '' %}
 {% set days_30_checked = 'checked' if details.time_window == 'days_30' else '' %}
-{% set unprocessed_checked = 'checked' if details.is_unprocessed_only == True else '' %}
+{% set unprocessed_checked = 'checked' if not details.is_request_valid or details.is_unprocessed_only == True else '' %}
 
 <form data-form_initial_load="{{ 'true' if details.is_request_valid else 'false' }}" style="text-align: center" method="get" id="form_time_window">
     <label><input type="radio" name="time_window" id="days_1" value="days_1" {{ days_1_checked }} />Today</label>
