#48 #49 addressing UI testing bugs

--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -29,8 +29,7 @@
 <table class="header-table">
     <thead>
     <tr>
-        <th>Synergy Scheduler</th>
-        <th></th>
+        <th colspan="2">Synergy Scheduler</th>
         {%- for mx_rule, mx_name in mx_processing_context.items() -%}
         <th></th>
         {%- endfor -%}
