- first sketch to include *noop* and *inactive* checkboxes into time_window_block

--- a/synergy/mx/templates/block_time_window_selector.html
+++ b/synergy/mx/templates/block_time_window_selector.html
@@ -3,13 +3,17 @@
 {% set days_7_checked = 'checked' if details.time_window == 'days_7' else '' %}
 {% set days_30_checked = 'checked' if details.time_window == 'days_30' else '' %}
 {% set unprocessed_checked = 'checked' if not details.is_request_valid or details.is_unprocessed_only == True else '' %}
+{% set noop_checked = 'checked' if details.is_include_noop == True else '' %}
+{% set inactive_checked = 'checked' if details.is_include_inactive == True else '' %}
 
 <form data-form_initial_load="{{ 'true' if details.is_request_valid else 'false' }}" style="text-align: center" method="get" id="form_time_window">
-    <label><input type="radio" name="time_window" id="days_1" value="days_1" {{ days_1_checked }} />Today</label>
-    <label><input type="radio" name="time_window" id="days_7" value="days_7" {{ days_7_checked }} />Last 7 Days</label>
-    <label><input type="radio" name="time_window" id="days_30" value="days_30" {{ days_30_checked }} />Last 30 Days</label>
+    <label><input type="radio" name="time_window" id="days_1" value="1" {{ days_1_checked }} />Today</label>
+    <label><input type="radio" name="time_window" id="days_7" value="7" {{ days_7_checked }} />Last 7 Days</label>
+    <label><input type="radio" name="time_window" id="days_30" value="30" {{ days_30_checked }} />Last 30 Days</label>
     <br/>
-    <label><input type="checkbox" name="unprocessed_only" id="unprocessed_only" {{ unprocessed_checked }} />Unprocessed only</label>
+    <label><input type="checkbox" name="unprocessed_only" id="unprocessed_only" {{ unprocessed_checked }} />Unprocessed&nbsp;only</label>
+    <label><input type="checkbox" name="noop" id="include_noop" {{ noop_checked }} />Include&nbsp;NOOP</label>
+    <label><input type="checkbox" name="inactive" id="include_inactive" {{ inactive_checked }} />Include&nbsp;Inactive</label>
     <input type="submit" class="action_button fa-input" title="Refresh" value="&#xf021;&nbsp;Refresh"/>
 </form>
 
