- refactoring time_window_selector block

--- a/synergy/mx/templates/block_time_window_selector.html
+++ b/synergy/mx/templates/block_time_window_selector.html
@@ -1,19 +1,19 @@
 {% macro time_window_selector(details, number_sorted_columns) -%}
-{% set days_1_checked = 'checked' if not details.is_request_valid or details.time_window == 'days_1' else '' %}
-{% set days_7_checked = 'checked' if details.time_window == 'days_7' else '' %}
-{% set days_30_checked = 'checked' if details.time_window == 'days_30' else '' %}
-{% set unprocessed_checked = 'checked' if not details.is_request_valid or details.is_unprocessed_only == True else '' %}
-{% set noop_checked = 'checked' if details.is_include_noop == True else '' %}
-{% set inactive_checked = 'checked' if details.is_include_inactive == True else '' %}
+{% set days_1_checked = 'checked' if not details.is_request_valid or details.time_window == '1' else '' %}
+{% set days_7_checked = 'checked' if details.time_window == '7' else '' %}
+{% set days_30_checked = 'checked' if details.time_window == '30' else '' %}
+{% set exclude_processed_checked = 'checked' if not details.is_request_valid or details.is_exclude_processed == True else '' %}
+{% set exclude_noop_checked = 'checked' if not details.is_request_valid or details.is_exclude_noop == True else '' %}
+{% set exclude_inactive_checked = 'checked' if not details.is_request_valid or details.is_exclude_inactive == True else '' %}
 
 <form data-form_initial_load="{{ 'true' if details.is_request_valid else 'false' }}" style="text-align: center" method="get" id="form_time_window">
-    <label><input type="radio" name="time_window" id="days_1" value="1" {{ days_1_checked }} />Today</label>
-    <label><input type="radio" name="time_window" id="days_7" value="7" {{ days_7_checked }} />Last 7 Days</label>
-    <label><input type="radio" name="time_window" id="days_30" value="30" {{ days_30_checked }} />Last 30 Days</label>
+    <label><input type="radio" name="time_window" id="days_1" value="1" {{ days_1_checked }} />today</label>
+    <label><input type="radio" name="time_window" id="days_7" value="7" {{ days_7_checked }} />last 7 days</label>
+    <label><input type="radio" name="time_window" id="days_30" value="30" {{ days_30_checked }} />last 30 days</label>
     <br/>
-    <label><input type="checkbox" name="unprocessed_only" id="unprocessed_only" {{ unprocessed_checked }} />Unprocessed&nbsp;only</label>
-    <label><input type="checkbox" name="noop" id="include_noop" {{ noop_checked }} />Include&nbsp;NOOP</label>
-    <label><input type="checkbox" name="inactive" id="include_inactive" {{ inactive_checked }} />Include&nbsp;Inactive</label>
+    <label><input type="checkbox" name="exclude_processed" id="exclude_processed" {{ exclude_processed_checked }} />exclude&nbsp;processed</label>
+    <label><input type="checkbox" name="exclude_noop" id="exclude_noop" {{ exclude_noop_checked }} />exclude&nbsp;NOOP</label>
+    <label><input type="checkbox" name="exclude_inactive" id="exclude_inactive" {{ exclude_inactive_checked }} />exclude&nbsp;inactive</label>
     <input type="submit" class="action_button fa-input" title="Refresh" value="&#xf021;&nbsp;Refresh"/>
 </form>
 
