- introducing TODO with the list of names for the checkboxes

--- a/synergy/mx/templates/block_time_window_selector.html
+++ b/synergy/mx/templates/block_time_window_selector.html
@@ -11,6 +11,7 @@
     <label><input type="radio" name="time_window" id="days_7" value="7" {{ days_7_checked }} />last 7 days</label>
     <label><input type="radio" name="time_window" id="days_30" value="30" {{ days_30_checked }} />last 30 days</label>
     <br/>
+    <!-- TODO: running, processed, skipped, noop -->
     <label><input type="checkbox" name="exclude_processed" id="exclude_processed" {{ exclude_processed_checked }} />exclude&nbsp;processed</label>
     <label><input type="checkbox" name="exclude_noop" id="exclude_noop" {{ exclude_noop_checked }} />exclude&nbsp;NOOP</label>
     <label><input type="checkbox" name="exclude_inactive" id="exclude_inactive" {{ exclude_inactive_checked }} />exclude&nbsp;inactive</label>
