- introducing actual feedback email address

--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -63,7 +63,7 @@
         page rendered: {{ get_current_time() }}
     </div>
     <div class="table_layout_element" style="text-align: right">
-        <a href="mailto:mushkevych@users.noreply.github.com?subject=Comments to Scheduler MX page">Feedback</a>
+        <a href="mailto:scheduler.feedback@gmail.com?subject=Comments to Scheduler MX page">Feedback</a>
     </div>
 </div>
 </body>
