--- a/synergy/mx/templates/dashboard_freeruns.html
+++ b/synergy/mx/templates/dashboard_freeruns.html
@@ -12,6 +12,7 @@
         <th scope="col">Time period</th>
         <th scope="col">State</th>
         <th scope="col"></th>  <!-- View Uow -->
+        <th scope="col"></th>  <!-- Uow Log -->
     </tr>
     </thead>
     <tbody>
@@ -24,9 +25,16 @@
         <td>{{ uow_entry.state }}</td>
         <td>
             {% set url = 'action=action/get_uow' + '&process_name=' + uow_entry.process_name + '&entry_name=' + uow_entry.entry_name + '&is_freerun=True' %}
-            <form method="GET" onsubmit="window.open('/object_viewer/?{{ url }}','Get Uow',
-                    'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=400,height=350'); return false;">
+            <form method="GET" onsubmit="window.open('/object_viewer/?{{ url }}','View Uow',
+                    'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=450,height=400'); return false;">
                 <input type="submit" class="action_button fa-input" title="View Uow" value="&#xf1c9;&nbsp;Uow"/>
+            </form>
+        </td>
+        <td>
+            {% set url = 'action=action/get_uow_log' + '&process_name=' + uow_entry.process_name + '&entry_name=' + uow_entry.entry_name + '&is_freerun=True' %}
+            <form method="GET" onsubmit="window.open('/object_viewer/?{{ url }}','Uow Log',
+                    'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=800,height=480'); return false;">
+                <input type="submit" class="action_button fa-input" title="Uow Log" value="&#xf0f6;&nbsp;Uow&nbsp;Log"/>
             </form>
         </td>
     </tr>
