--- a/synergy/mx/templates/dashboard_managed.html
+++ b/synergy/mx/templates/dashboard_managed.html
@@ -27,21 +27,21 @@
         <td>{{ job_entry.state }}</td>
         <td>
             {% set url = 'action=action/get_uow' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
-            <form method="GET" onsubmit="window.open('/object_viewer/?{{ url }}','View Uow',
+            <form method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','View Uow',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=450,height=400'); return false;">
                 <input type="submit" class="action_button fa-input" title="View Uow" value="&#xf1c9;&nbsp;Uow"/>
             </form>
         </td>
         <td>
             {% set url = 'action=action/get_uow_log' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
-            <form method="GET" onsubmit="window.open('/object_viewer/?{{ url }}','Uow Log',
+            <form method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','Uow Log',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=800,height=480'); return false;">
                 <input type="submit" class="action_button fa-input" title="Uow Log" value="&#xf0f6;&nbsp;Uow&nbsp;Log"/>
             </form>
         </td>
         <td>
             {% set url = 'action=action/get_event_log' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
-            <form method="GET" onsubmit="window.open('/object_viewer/?{{ url }}','Event Log',
+            <form method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','Event Log',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=800,height=480'); return false;">
                 <input type="submit" class="action_button fa-input" title="Event Log" value="&#xf00b;&nbsp;Event&nbsp;Log"/>
             </form>
