--- a/synergy/mx/templates/scheduler_managed_entries.html
+++ b/synergy/mx/templates/scheduler_managed_entries.html
@@ -40,7 +40,7 @@
             <form method="GET" action="/action/trigger_now/">
                 <input type="hidden" name="process_name" value="{{ row.process_name }}" />
                 <input type="hidden" name="timeperiod" value="NA" />
-                <input type="submit" class="action_button fa-input" title="Trigger" value="&#xf1d9;&nbsp;Trigger"/>
+                <input type="submit" class="action_button fa-input" title="Trigger" value="&#xf135;&nbsp;Trigger"/>
             </form>
         </td>
         <td>{{ row.next_run_in }}</td>
