--- a/synergy/mx/templates/scheduler_freerun_entries.html
+++ b/synergy/mx/templates/scheduler_freerun_entries.html
@@ -49,7 +49,7 @@
                 <input type="hidden" name="process_name" value="{{ row.process_name }}" />
                 <input type="hidden" name="entry_name" value="{{ row.entry_name }}" />
                 <input type="hidden" name="is_freerun" value="True" />
-                <input type="submit" class="action_button fa-input" title="Trigger" value="&#xf1d9;&nbsp;Trigger"/>
+                <input type="submit" class="action_button fa-input" title="Trigger" value="&#xf135;&nbsp;Trigger"/>
             </form>
         </td>
 
@@ -85,8 +85,7 @@
             </form>
         </td>
         <td>
-            {% set form_url = url_for('/viewer/schedulable/') %}
-            {% set url = form_url + '?process_name=' + row.process_name + '&entry_name=' + row.entry_name + '&is_freerun=True' + '&is_new_entry=False'%}
+            {% set url = '/viewer/schedulable/?process_name=' + row.process_name + '&entry_name=' + row.entry_name + '&is_freerun=True' + '&is_new_entry=False'%}
             <form method="GET"
                  onsubmit="window.open('{{ url }}','Edit Freerun Trigger',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=750,height=550'); return false;">
@@ -98,8 +97,7 @@
 
     <tr>
         <td colspan="13">
-            {% set form_url = url_for('/viewer/schedulable/') %}
-            {% set url = form_url + '?is_new_entry=True'%}
+            {% set url = '/viewer/schedulable/?is_new_entry=True'%}
             <a href="#" onClick="MyWindow=window.open('{{ url }}','New Freerun Trigger',
                 'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=750,height=550'); return false;">
                 <i class="fa fa-plus"></i>&nbsp;Add New Freerun Trigger
