--- a/synergy/mx/templates/dashboard_managed.html
+++ b/synergy/mx/templates/dashboard_managed.html
@@ -14,6 +14,7 @@
         <th scope="col"></th>  <!-- View Uow -->
         <th scope="col"></th>  <!-- Uow Log -->
         <th scope="col"></th>  <!-- Event Log -->
+        <th scope="col"></th>  <!-- Workflow -->
     </tr>
     </thead>
     <tbody>
@@ -44,6 +45,13 @@
             <form method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','Event Log',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=800,height=480'); return false;">
                 <input type="submit" class="action_button fa-input" title="Event Log" value="&#xf00b;&nbsp;Event&nbsp;Log"/>
+            </form>
+        </td>
+        <td>
+            {% set url = 'action=flow/details/flow' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
+            <form method="GET" onsubmit="window.open('/viewer/flow/?{{ url }}','Workflow',
+                 'toolbar=no,scrollbars=yes,resizable=yes,top=150,left=250,width=800,height=800'); return false;">
+                <input type="submit" class="action_button fa-input" title="Workflow" value="&#xf074;&nbsp;Workflow"/>
             </form>
         </td>
     </tr>
