--- a/synergy/mx/templates/schedulable_form.html
+++ b/synergy/mx/templates/schedulable_form.html
@@ -27,7 +27,7 @@
 <pre id="json"></pre>
 
 
-<form method="POST" action="/action/update_freerun_entry/">
+<form method="POST" action="/freerun/entry/">
     <table class="one-column-emphasis">
         <tr>
             <td>Process name:</td>
