--- a/synergy/mx/templates/block_context_menu.html
+++ b/synergy/mx/templates/block_context_menu.html
@@ -2,12 +2,12 @@
 <div class="context_menu_hide" id="rmenu">
     <ul>
         <li>
-            <a onclick="process_batch('action/activate_trigger', {{ is_freerun|string|lower }} )">
+            <a onclick="process_batch({% if is_freerun %}'freerun/entry/activate'{% else %}'managed/entry/activate'{% endif %} )">
                 <i class="fa fa-toggle-on"></i>&nbsp;Activate
             </a>
         </li>
         <li>
-            <a onclick="process_batch('action/deactivate_trigger', {{ is_freerun|string|lower }} )">
+            <a onclick="process_batch({% if is_freerun %}'freerun/entry/deactivate'{% else %}'managed/entry/deactivate'{% endif %} )">
                 <i class="fa fa-toggle-off"></i>&nbsp;Deactivate
             </a>
         </li>
@@ -21,12 +21,12 @@
 <div class="context_menu_hide" id="rmenu">
     <ul>
         <li>
-            <a onclick="process_batch('action/skip', false)">
+            <a onclick="process_batch('tree/node/skip', false)">
                 <i class="fa fa-step-forward"></i>&nbsp;Skip
             </a>
         </li>
         <li>
-            <a onclick="process_batch('action/reprocess', false)">
+            <a onclick="process_batch('tree/node/reprocess', false)">
                 <i class="fa fa-repeat"></i>&nbsp;Reprocess
             </a>
         </li>
