--- a/synergy/mx/templates/scheduler_freerun_entries.html
+++ b/synergy/mx/templates/scheduler_freerun_entries.html
@@ -29,26 +29,24 @@
     <tr>
     {%- endif -%}
         <td>
-            {% set value = "{ process_name: '" + row.process_name + "', entry_name: '" + row.entry_name + "', is_freerun: 'True' }" %}
+            {% set value = "{ process_name: '" + row.process_name + "', entry_name: '" + row.entry_name + "' }" %}
             <input type="checkbox" name="batch_processing" value="{{ value }}"/>
         </td>
         <td>{{ row.is_on }} / {{ row.is_alive }}</td>
         <td>{{ row.process_name }}</td>
         <td>{{ row.entry_name }}</td>
         <td>
-            <form method="GET" action="/action/change_interval/">
+            <form method="POST" action="/freerun/entry/interval/">
                 <input type="hidden" name="process_name" value="{{ row.process_name }}" />
                 <input type="hidden" name="entry_name" value="{{ row.entry_name }}" />
-                <input type="hidden" name="is_freerun" value="True" />
                 <input type="text" size="8" maxlength="32" name="interval" value="{{ row.trigger_frequency }}" />
                 <input type="submit" class="fa-input" title="Apply" value="&#xf00c;"/>
             </form>
         </td>
         <td>
-            <form method="GET" action="/action/trigger_now/">
+            <form method="POST" action="/freerun/entry/trigger/">
                 <input type="hidden" name="process_name" value="{{ row.process_name }}" />
                 <input type="hidden" name="entry_name" value="{{ row.entry_name }}" />
-                <input type="hidden" name="is_freerun" value="True" />
                 <input type="submit" class="action_button fa-input" title="Trigger" value="&#xf135;&nbsp;Trigger"/>
             </form>
         </td>
@@ -56,36 +54,35 @@
         <td>{{ row.next_run_in }}</td>
         <td>{{ row.arguments|jsonify }}</td>
         <td>
-            {% set url = 'action=action/get_uow' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name + '&is_freerun=True' %}
+            {% set url = 'action=freerun/uow' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
             <form method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','View Uow',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=450,height=400'); return false;">
                 <input type="submit" class="action_button fa-input" title="View Uow" value="&#xf1c9;&nbsp;Uow"/>
             </form>
         </td>
         <td>
-            {% set url = 'action=action/get_uow_log' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name + '&is_freerun=True' %}
+            {% set url = 'action=freerun/log/uow' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
             <form method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','Uow Log',
                     'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=800,height=480'); return false;">
                 <input type="submit" class="action_button fa-input" title="Log Uow" value="&#xf0f6;&nbsp;Log&nbsp;Log"/>
             </form>
         </td>
         <td>
-            {% set url = 'action=action/get_event_log' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name + '&is_freerun=True' %}
+            {% set url = 'action=freerun/log/event' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
             <form method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','Event Log',
                     'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=800,height=480'); return false;">
                 <input type="submit" class="action_button fa-input" title="Event Uow" value="&#xf00b;&nbsp;Event&nbsp;Log"/>
             </form>
         </td>
         <td>
-            <form method="GET" action="/action/cancel_uow/">
+            <form method="GET" action="/freerun/uow/cancel/">
                 <input type="hidden" name="process_name" value="{{ row.process_name }}" />
                 <input type="hidden" name="entry_name" value="{{ row.entry_name }}" />
-                <input type="hidden" name="is_freerun" value="True" />
                 <input type="submit" class="action_button fa-input" title="Cancel Uow" value="&#xf00d;&nbsp;Cancel"/>
             </form>
         </td>
         <td>
-            {% set url = '/viewer/schedulable/?process_name=' + row.process_name + '&entry_name=' + row.entry_name + '&is_freerun=True' + '&is_new_entry=False'%}
+            {% set url = '/viewer/schedulable/?process_name=' + row.process_name + '&entry_name=' + row.entry_name + '&is_new_entry=False'%}
             <form method="GET"
                  onsubmit="window.open('{{ url }}','Edit Freerun Trigger',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=750,height=550'); return false;">
