--- a/synergy/mx/templates/block_time_window_selector.html
+++ b/synergy/mx/templates/block_time_window_selector.html
@@ -28,7 +28,7 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        load_dataset('#form_time_window', 'form_initial_load', {{ sorted_columns|safe }});
+        loadDataset('#form_time_window', 'form_initial_load', {{ sorted_columns|safe }});
     });
 </script>
 {%- endmacro %}
