--- a/synergy/mx/templates/dashboard_freeruns.html
+++ b/synergy/mx/templates/dashboard_freeruns.html
@@ -4,7 +4,7 @@
 {% import 'block_time_window_selector.html' as block_time_window %}
 {{ block_time_window.time_window_selector(details, 3) }}
 
-<div><table class="one-column-emphasis synergy_datatable" id="dashboard_table">
+<div><table class="one-column-emphasis synergy-datatable" id="dashboard_table">
     <thead>
     <tr class="one-column-emphasis-first">
         <th scope="col">Process Name</th>
