--- a/synergy/mx/templates/mx_page_tiles.html
+++ b/synergy/mx/templates/mx_page_tiles.html
@@ -1,7 +1,8 @@
 {% extends 'main_header.html' %}
-{% block body %}
+{% block body scoped %}
 
-    {%- for tree_name, tree_obj in details.items() %}
+    {% set mx_trees = details.mx_page_trees(mx_page) %}
+    {%- for tree_name, tree_obj in mx_trees.items() %}
         <div class="grid-container">
             <div id="grid-header-{{ tree_name }}" class="grid-header"></div>
             {% for process_name in tree_obj.sorted_process_names %}
@@ -20,7 +21,7 @@
 {{ context_menu.job_menu() }}
 
 <script type="text/javascript">
-    var mx_trees = {{ details|jsonify|safe }};
+    var mx_trees = {{ details.mx_page_trees(mx_page)|jsonify|safe }};
 </script>
 <script type="text/javascript" src="{{ url_for('static', file='js/tiles.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', file='js/mx_page.js') }}"></script>
