--- a/synergy/mx/templates/scheduler_freerun_entries.html
+++ b/synergy/mx/templates/scheduler_freerun_entries.html
@@ -3,7 +3,7 @@
 <table class="one-column-emphasis context-menu">
     <thead>
     <tr class="one-column-emphasis-first">
-        <th scope="col"><input type="checkbox" name="select_all" onclick="toggle_all_checkboxes(this)"/> </th>
+        <th scope="col"><input type="checkbox" name="select_all" onclick="toggleAllCheckboxes(this)"/> </th>
         <th scope="col">Trigger On/Alive</th>
         <th scope="col">Process Name</th>
         <th scope="col">Entry Name</th>
