resolving API calls deprecated by JQuery 3.1.X

--- a/synergy/mx/static/css/mx_page.css
+++ b/synergy/mx/static/css/mx_page.css
@@ -86,6 +86,10 @@ body {
     display: inline-block;
     width: 110px;
     padding: 1px;
+
+    /* flat button */
+
+
 }
 
 .action_toogle:hover {
