refactored tree_details.mx_page_trees to accept name of the MX page

--- a/synergy/mx/templates/block_enable_auto_refresh.html
+++ b/synergy/mx/templates/block_enable_auto_refresh.html
@@ -24,7 +24,7 @@
         }
     }
 
-    $(document).ready(function () {
+    $(function () {  // former $(document).ready(function () {...})
         checkAutoReload();
     });
 </script>
