--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -19,18 +19,21 @@
     <title>Synergy Scheduler</title>
 </head>
 
+{# Jinja2 variable scope visibility workaround: declared as a list so it is available to inherited templates #}
+{% set active_mx_page = [] %}
+
 {% macro render_td(endpoint, title) %}
     {% set td_class = '' %}
-    {%- if endpoint in local.request.path -%}
+    {%- if '/' + endpoint in local.request.path -%}
         <script type="text/javascript">
-            var mx_page = "{{ endpoint|safe }}";
+            var active_mx_page = "{{ endpoint|safe }}";
         </script>
-        {% set mx_page = endpoint %}
+        {% do active_mx_page.append(endpoint) %}
         {% set td_class = 'class="active"' %}
     {%- endif -%}
 
     <td {{ td_class|safe }}>
-        <a href="{{ endpoint }}"> {{ title }}</a>
+        <a href="{{ '/' + endpoint }}"> {{ title }}</a>
     </td>
 {% endmacro %}
 
@@ -51,7 +54,7 @@
         {{  render_td(url_for('dashboard_managed'), 'dashboard jobs') }}
         {{  render_td(url_for('dashboard_freeruns'), 'dashboard freeruns') }}
         {%- for mx_rule, mx_page_name in mx_processing_context.items() %}
-            {{  render_td("/" + mx_rule, mx_page_name) }}
+            {{  render_td( mx_rule, mx_page_name) }}
         {%- endfor -%}
         {{  render_td(url_for('scheduler_managed_entries'), 'scheduler managed entries') }}
         {{  render_td(url_for('scheduler_freerun_entries'), 'scheduler freerun entries') }}
