--- a/synergy/mx/templates/schedulable_form.html
+++ b/synergy/mx/templates/schedulable_form.html
@@ -94,12 +94,12 @@
         <td colspan="3" align="center">
             <div id="buttons">
             {%- if not handler -%}
-                <input type="submit" name="insert_button" value="Insert" onclick="closeWindow()"/>
+                <input type="submit" name="insert_button" formmethod="put" value="Insert" onclick="closeWindow()"/>
             {%- else -%}
-                <input type="submit" name="update_button" value="Update" onclick="closeWindow()"/>
-                <input type="submit" name="delete_button" value="Delete" onclick="closeWindow()"/>
+                <input type="submit" name="update_button" formmethod="post" value="Update" onclick="closeWindow()"/>
+                <input type="submit" name="delete_button" formmethod="delete" value="Delete" onclick="closeWindow()"/>
             {%- endif -%}
-                <input type="submit" name="cancel_button" value="Cancel" onclick="closeWindow()"/>
+                <input type="submit" name="cancel_button" formmethod="head" value="Cancel" onclick="closeWindow()"/>
 
                 <!-- Need this to have the buttons actually inside div#buttons -->
                 <div style="clear:both"></div>
